alignment fix - bottom bar

--- a/src/components/Inputs/Inputs.scss
+++ b/src/components/Inputs/Inputs.scss
@@ -4,7 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  padding-left: 1rem;
+  padding-right: 1rem;
   input {
     font-size: 1rem;
     background-color: #c8c9ca;
